# iie-research-landscape

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: performance.md
scrapping/: README.md
scrapping/data/: all_sources.json  iie_labs.csv
scrapping/data/extracted/: epfl_graph.json  epfl_graph_teaching.json  infoscience.json
scrapping/data/keyword_groups/epfl_graph/: concept_parent.json  tree.json
scrapping/data/scrapped/: epfl_graph.json
scrapping/epfl_iie/: README.md
scrapping/epfl_iie/data/: all_sources.json
scrapping/epfl_iie/scripts/: classify_keywords_chatgpt.py  classify_keywords_in_epfl_graph.py  extract_info_epfl_graph.py  extract_info_infoscience.py  generate_keyword_groups_epfl_graph.py  scrap_epfl_graph.sql  scrap_epfl_graph_keywords_categories.sql  scrap_infoscience.py
scrapping/ethz_ifu/: README.md
scrapping/ethz_ifu/data/: all_sources.json  labs.csv
scrapping/ethz_ifu/scripts/: extract_info_research_collection.py  scrap_research_collection.py
scrapping/ethz_usys/: README.md
scrapping/ethz_usys/data/: all_sources.json  labs.csv
scrapping/ethz_usys/scripts/: extract_info_research_collection.py  scrap_research_collection.py
scrapping/scripts/: README.md  classify_keywords_chatgpt.py  extract_info_epfl_graph.py  extract_info_infoscience.py  generate_keyword_groups_epfl_graph.py  iie_labs.csv  iie_labs.txt  merge.py  scrap_cadidb.sql  scrap_epfl_graph.fmw  scrap_epfl_graph.sql  scrap_epfl_graph_keywords_categories.sql  scrap_epfl_graph_teaching.sql  scrap_infoscience.py
(+106 files in other folders)
