[tool.poetry]
name = "scrapping"
version = "0.1.0"
description = ""
authors = ["Son Pham-Ba <son.phamba@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
preview = true

[tool.isort]
line_length = 120
profile = "black"
